--- a/custom-web-shop/package.json
+++ b/custom-web-shop/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:fix": "eslint --fix --ext .js,.jsx ./src" 
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +46,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.2",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "install": "^0.13.0",
     "jest": "^27.5.1",
     "jest-styled-components": "^7.1.1"
