--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "notistack": "^2.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cc-number-formatter": "^0.9.1",
     "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
