--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@hirishu10/simple-date-time": "^1.0.1",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.10",
@@ -15,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "material-ui-popup-state": "^5.0.4",
+    "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
