--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ungap/structured-clone": "^1.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
