--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@ungap/structured-clone": "^1.2.0",
+    "axios": "^1.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^5.0.4",
