--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "tsc": "tsc",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -76,6 +77,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "install": "^0.13.0",
     "jest": "^27.5.1",
-    "jest-styled-components": "^7.1.1"
+    "jest-styled-components": "^7.1.1",
+    "typescript": "^5.0.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
   }
 }
