--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "custom-web-shop",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
