--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "install": "^0.13.0",
     "jest": "^27.5.1",
     "jest-styled-components": "^7.1.1",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   },
   "resolutions": {
