--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
