--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.2",
+    "@types/lodash.debounce": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.34.0",
