--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@mui/material": "^5.11.10",
     "@mui/styled-engine-sc": "^5.11.9",
     "@mui/system": "^5.11.9",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@ungap/structured-clone": "^1.2.0",
     "axios": "^1.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
@@ -47,7 +47,7 @@
     "start": "react-scripts start",
     "tsc": "tsc",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject",
     "lint:fix": "eslint --fix --ext .js,.jsx ./src"
   },
@@ -71,7 +71,9 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/jest-native": "^5.4.2",
     "@types/lodash.debounce": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -89,6 +91,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "install": "^0.13.0",
     "jest": "^27.5.1",
+    "jest-mock-axios": "^4.7.2",
     "jest-styled-components": "^7.1.1",
     "prettier": "^2.8.8",
     "ts-jest": "^29.1.0",
@@ -97,5 +100,13 @@
   "resolutions": {
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "axios": "axios/dist/node/axios.cjs"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios)/)"
+    ]
   }
 }
