--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.4.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "history": "^5.3.0",
+    "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "material-ui-popup-state": "^5.0.4",
@@ -75,6 +77,8 @@
     "@babel/preset-typescript": "^7.22.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/jest-native": "^5.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwt-decode": "^3.1.0",
     "@types/lodash.debounce": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
