Added /verify and cookies

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@types/webpack": "^5.28.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -22,6 +23,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@ungap/structured-clone": "^1.2.0",
     "axios": "^1.4.0",
+    "browserify": "^17.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.1",
@@ -31,6 +35,7 @@
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cc-number-formatter": "^0.9.1",
@@ -42,15 +47,18 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
+    "util": "^0.12.5",
+    "webpack": "^5.88.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "tsc": "tsc",
-    "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
-    "eject": "react-scripts eject",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
+    "eject": "react-app-rewireds eject",
     "lint:fix": "eslint --fix --ext .js,.jsx ./src"
   },
   "eslintConfig": {
@@ -61,8 +69,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      "> 0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
@@ -75,6 +84,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/jest-native": "^5.4.2",
     "@types/jsonwebtoken": "^9.0.2",
@@ -98,8 +108,13 @@
     "jest-mock-axios": "^4.7.2",
     "jest-styled-components": "^7.1.1",
     "prettier": "^2.8.8",
+    "react-app-rewired": "^2.2.1",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
+  },
+  "browser": {
+    "crypto": false,
+    "stream": false
   },
   "resolutions": {
     "@types/react": "17.0.2",
