--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     /* Visit https://aka.ms/tsconfig to read more about this file */
-
+    // "baseUrl": "./",
+    // "paths": {
+    //   "crypto": ["node_modules/crypto-js"],
+    //   "stream": ["node_modules/stream-browserify"]
+    // },
     /* Projects */
     // "incremental": true,                              /* Save .tsbuildinfo files to allow for incremental compilation of projects. */
     // "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
