--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@types/webpack": "^5.28.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
@@ -21,11 +20,13 @@
     "@mui/system": "^5.11.9",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/webpack": "^5.28.1",
     "@ungap/structured-clone": "^1.2.0",
     "axios": "^1.4.0",
     "browserify": "^17.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.1",
@@ -35,6 +36,7 @@
     "material-ui-popup-state": "^5.0.4",
     "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -50,8 +52,8 @@
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6",
     "util": "^0.12.5",
-    "webpack": "^5.88.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.88.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
