--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@mui/material": "^5.11.10",
     "@testing-library/react": "^13.4.0",
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "lodash.debounce": "^4.0.8",
     "mdb-react-ui-kit": "^5.1.0",
     "notistack": "^2.0.8",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
